		  ----------------------------
The following bugs have been fixed in the 1.4.4 release.

6905730	MimeMessage.parse() is very slow on malformed message content
G 11069	update the mail.jar manifest to include DynamicImport-Package
<no id>	add mail.mime.windowsfilenames System property to handle IE6 breakage
<no id>	properly disable TOP if POP3 CAPA response doesn't include it


		  CHANGES IN THE 1.4.3 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.3 release.

6829124	IMAPFolder deadlock using IMAP IDLE
6850882	IMAPMessage returns wrong getMessageNumber() from messageRemovedEvent
6857090	JavaMail is not sending HELO / EHLO according to specs
6872072	QPEncoderStream write method eats up trailing white space of a string
6875367	LineOutputStream wraps IOException instead of throwing it directly
6890265	SMTPTransport does not close socket if STARTTLS is req'd but not sup'd
G  9941	SMTPTransport violates RFC 2821 in HELO command
K   202	InternetAddress verifies domain per RFC1034 instead of RFC822 in strict
K  1207	added NTLM authentication support for SMTP and IMAP, see NTLMNOTES.txt
<no id>	add starttls support to POP3
<no id>	add mail.transport.protocol.<address-type> property
<no id>	fail POP3Folder.open if STAT command fails
<no id>	fix POP3Folder.isOpen if POP3 server fails and is then reconnected
<no id>	better handle modifying messages created from input streams
<no id>	include server error message in exception when SMTP authentication fails
<no id>	com.sun.mail.util.logging.MailHandler contributed by Jason Mehrens
<no id>	add mail.smtp.noop.strict property, default true
<no id>	add mail.<protocol>.ssl.trust property to list hosts to be trusted
<no id>	work around buggy IMAP servers that don't quote mbox name in STATUS resp


		  CHANGES IN THE 1.4.2 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.2 release.

6621377	unexpected result when uuencode data has any line starting with